<resources>
    <string name="app_name">君融贷</string>
    <string name="loan_str_back">返回</string>
    <string name="loan_finance">理财</string>
    <string name="loan_recharge">充值</string>
    <string name="loan_withdraw">提现</string>
    <string name="loan_my_bankcard">我的银行卡</string>
    <string name="loan_my_account">我的账户</string>
    <string name="loan_version_update">发现新版本</string>
    <string name="loan_later_on">以后再说</string>
    <string name="loan_immediate_updates">立即更新</string>
    <string name="loan_upd_content">更新内容</string>
    <string name="loan_base_compleate">完&#160;&#160;成</string>
    <string name="loan_base_back">返回</string>
    <string name="loan_base_next">下一步</string>
    <string name="loan_base_sure">确认</string>
    <string name="loan_return_correction">返回修改</string>
    <string name="loan_I_have_confirmed">我已确认</string>
    <string name="loan_base_enter">确定</string>
    <string name="loan_base_cancel">取消</string>
    <string name="loan_base_confirm">取消</string>
    <string name="loan_base_quit">退出</string>
    <string name="loan_dialog_button_enter">确&#160;&#160;定</string>
    <string name="loan_setting_state_setted">已设置&#160;&#160;</string>
    <string name="loan_setting_state_notset">未设置&#160;&#160;</string>
    <string name="loan_my_account_no_setting">未设置</string>
    <string name="loan_contactcustomerservice_tips">若该手机号无法接收验证短信,请联系客服</string>
    <string name="loan_customerservice_callandtime">&#160;&#160;4000&#8211;655&#8211;677&#160;&#160;&#160;&#160;服务时间:9:00&#8211;18:00</string>
    <string name="loan_customerservice_tips_callandtime">&#160;&#160;4000&#8211;655&#8211;677</string>
    <string name="loan_customerservice_tips_time">工作日&#160;:&#160;</string>
    <string name="loan_customerservice_time">9:00&#8211;18:00</string>
    <string name="loan_customerservice_modify_logonpasswd_tips_time">工作日:&#160;&#160;8:30&#8211;20:30</string>
    <string name="loan_customerservice_modify_logonpasswd_weeken_tips_time">&#160;&#160;周末及节假日&#160;&#160;9:00&#8211;18:00</string>
    <string name="loan_personal_logout">确认要退出当前账号吗?</string>
    <string name="loan_personal_againgCode">%1$d秒后重新获取</string>
    <string name="loan_personal_getCode">获取验证码</string>
    <string name="loan_btn_bid_state_prepare_online">预上线</string>
    <string name="loan_btn_bid_state_full">已满标</string>
    <string name="loan_btn_bid_state_payback">还款中</string>
    <string name="loan_investment">投资中</string>
    <string name="loan_repayment_end">已还款</string>
    <string name="loan_btn_bid_state_pay_complete">已还清</string>
    <string name="loan_btn_bid_state_closed">已满额</string>
    <string name="loan_over_than_mone">投资额度超过最大可投资额</string>
    <string name="loan_complete_set">设置成功</string>
    <string name="loan_complete_update">修改成功</string>
    <string name="loan_complete_reset">重置成功</string>
    <string name="loan_account_reset_loginpsw_complete">&#160;恭喜您,&#160;登录密码修改成功!</string>
    <string name="loan_account_reset_transpsw_complete">&#160;恭喜您,&#160;交易密码重置成功!</string>
    <string name="loan_account_set_transpsw_complete">&#160;恭喜您,&#160;交易密码设置成功!</string>
    <string name="loan_account_update_transpsw_complete">&#160;恭喜您,&#160;交易密码修改成功!</string>
    <string name="loan_account_login">登录</string>
    <string name="loan_account_login_regist_immediately">立即注册</string>
    <string name="loan_account_login_forgetloginpsw">忘记密码</string>
    <string name="loan_account_login_resetpsw">重置密码</string>
    <string name="loan_account_login_changeloginpsw">修改登录密码</string>
    <string name="loan_account_login_loginputtips">请输入用户名/邮箱/手机号</string>
    <string name="loan_account_login_pswtips">请输入密码</string>
    <string name="loan_account_login_smstips">请输入验证码</string>
    <string name="loan_account_login_getCode">获取验证码</string>
    <string name="loan_account_login_loading">&#160;&#160;加载中..</string>
    <string name="loan_account_login_loadfailed">&#160;&#160;加载失败</string>
    <string name="loan_account_regist_title">注册</string>
    <string name="loan_account_regist_btn">注册100%领大礼包</string>
    <string name="loan_account_regist_login_immediately">已有账户&#160;&#160;立即登录</string>
    <string name="loan_account_regist_setloginpsw">设置密码</string>
    <string name="loan_account_regist_setloginpswtips">请设置登录密码</string>
    <string name="loan_account_regist_agreement">注册协议</string>
    <string name="loan_account_regist_setloginpsw_hint">请设置登录密码</string>
    <string name="loan_account_regist_identityverfiy">实名认证</string>
    <string name="loan_account_regist_inputidnumtips">仅支持中国大陆身份证号</string>
    <string name="loan_account_regist_inputinvitecodetips">请输入邀请码</string>
    <string name="loan_account_regist_inputtelnumtips">请输入手机号</string>
    <string name="loan_account_regist_inputverfiycodetips">请输入验证码</string>
    <string name="loan_account_regist_inputnametips">请输入持卡人的真实姓名</string>
    <string name="loan_account_regist_realnameverfiy">实名认证</string>
    <string name="loan_account_regist_realnameverfiy_imm">立即认证</string>
    <string name="loan_account_regist_jumpidverfiy">暂不认证&#160;&#160;点击跳过</string>
    <string name="loan_account_regist_tips">理财不等同于银行存款，收益来自借款人支付的利息。过往业绩不预示其未来表现，市场有风险,投资需谨慎。</string>
    <string name="loan_account_identityverfiy_tips">为了保证借贷双方的安全,交易前账号必须实名</string>
    <string name="loan_account_regist_sendsmstophone_tips">将发送验证码到你的手机</string>
    <string name="loan_account_regist_sendsmstophone">发送验证码到你的手机</string>
    <string name="loan_account_regist_readagree">&#160;&#160;我已阅读并同意</string>
    <string name="loan_account_regist_splice">《君融贷网站服务协议》</string>
    <string name="loan_account_regist_invitecode">我有邀请码</string>
    <string name="loan_account_regist_select">&#160;&#160;(&#160;选填&#160;)</string>
    <string name="loan_account_regist_success_title">注册成功</string>
    <string name="loan_account_regist_success">&#160;&#160;&#160;&#160;恭喜您,&#160;&#160;注册成功!</string>
    <string name="loan_account_regist_success_investment">很荣幸我们可以为您提供理财服务</string>
    <string name="loan_account_regist_success_investmentprojects">投资项目</string>
    <string name="loan_account_regist_success_getcoupon">恭喜您获得105元注册优惠券</string>
    <string name="loan_account_regist_success_mycoupon">我的优惠券</string>
    <string name="loan_use_coupon">使用优惠券</string>
    <string name="loan_not_coupon">无优惠券</string>
    <string name="loan_not_used">未使用</string>
    <string name="loan_has_been_used">已使用</string>
    <string name="loan_expired">已过期</string>
    <string name="loan_project_introduce">项目介绍</string>
    <string name="loan_bid_now">立即投标</string>
    <string name="loan_confirm_bid">确认投标</string>
    <string name="loan_bid_records">投标记录</string>
    <string name="loan_more_detail">更多详情</string>
    <string name="loan_str_rsdr">先声夺人</string>
    <string name="loan_bid_person_count">%1$d人已投</string>
    <string name="loan_account_personal_title">个人信息</string>
    <string name="loan_account_personal_telnum">手机号码</string>
    <string name="loan_account_personal_invitenum">邀请码:</string>
    <string name="loan_account_personal_securitylevel">安全等级</string>
    <string name="loan_account_personal_securitylevel_high">高</string>
    <string name="loan_account_personal_securitylevel_middle">中</string>
    <string name="loan_account_personal_securitylevel_low">低</string>
    <string name="loan_account_personal_securitylevel_tips">您可以通过以下设置提高安全等级</string>
    <string name="loan_account_personal_identityverfiy">身份验证</string>
    <string name="loan_account_personal_loginpsw">登录密码</string>
    <string name="loan_account_personal_change_loginpsw">修改登录密码</string>
    <string name="loan_account_personal_change_psw">修改密码</string>
    <string name="loan_account_personal_change_psw_input">请输入新密码</string>
    <string name="loan_account_personal_change_psw_repeat">请再次输入新密码</string>
    <string name="loan_account_personal_transactionpsw">交易密码</string>
    <string name="loan_account_personal_set_transactionpsw">设置交易密码</string>
    <string name="loan_account_personal_set_transactionpsw_input">请输入交易密码</string>
    <string name="loan_account_personal_set_transactionpsw_repeat">请再次输入交易密码</string>
    <string name="loan_account_personal_change_transactionpsw_original">请输入原始交易密码</string>
    <string name="loan_account_personal_reset_transactionpsw">重置交易密码</string>
    <string name="loan_account_personal_reset_transactionpsw_bindcall_tips">为了您的账户安全请先通过手机验证</string>
    <string name="loan_account_personal_reset_transactionpsw_tips">交易密码不能与登录密码相同</string>
    <string name="loan_account_personal_change_transactionpsw">修改交易密码</string>
    <string name="loan_account_personal_change_transactionpsw_forget">忘记交易密码?</string>
    <string name="loan_account_personal_quite">退出登录</string>
    <string name="loan_account_pocket_text">活期口袋</string>
    <string name="loan_account_pocket_text_principal">活期口袋·本金</string>
    <string name="loan_account_pocket_text_profit">活期口袋·收益</string>
    <string name="loan_account_my_account_text">我的账户</string>
    <string name="loan_account_my_found">我的资产</string>
    <string name="loan_account_invest_text">投资记录</string>
    <string name="loan_account_return_text">回款计划</string>
    <string name="loan_account_trade_text">交易记录</string>
    <string name="loan_account_coupon_text">优惠券</string>
    <string name="loan_account_bankcard_text">银行卡</string>
    <string name="loan_agree">同意</string>
    <string name="loan_bid_protocol">《投资协议》</string>
    <string name="loan_bid_protocols">《服务协议及风险提示》</string>
    <string name="loan_immediately_turn_into">立即转入</string>
    <string name="loan_confirm_turn_out">确认转出</string>
    <string name="loan_InvestmentSuccess">投资成功</string>
    <string name="loan_InvestmentFailure">投资失败</string>
    <string name="loan_TransferAmount">转出金额</string>
    <string name="loan_TransferAmounts">可转出金额</string>
    <string name="loan_sysRemainderAmtCanTakeOut">剩余提取额度</string>
    <string name="loan_AvailableAmount">可使用金额</string>
    <string name="loan_TransferableAmounts">该账户本次最多可转出</string>
    <string name="loan_TransferableAmount">该卡本次最多可转出</string>
    <string name="loan_ExpectedArrivalTime">预计收益到账时间：工作日15:00前投资当日到账，15:00后投资次日到账（节假日顺延）</string>
    <string name="loan_input_amount">请输入金额</string>
    <string name="loan_all_turn_out">全部转出</string>
    <string name="loan_counter_fee">提现手续费</string>
    <string name="loan_Monday">(星期一)</string>
    <string name="loan_Tuesday">(星期二)</string>
    <string name="loan_Wednesday">(星期三)</string>
    <string name="loan_Thursday">(星期四)</string>
    <string name="loan_bid_time">投标时间</string>
    <string name="loan_bidder">投标人</string>
    <string name="loan_bid_money">投资金额(元)</string>
    <string name="loan_input_trade_pwd">请输入交易密码</string>
    <string name="loan_tips">温馨提示:</string>
    <string name="loan_tips_num_f">1.</string>
    <string name="loan_tips_num_s">2.</string>
    <string name="loan_tips_num_t">3.</string>
    <string name="loan_tips_num_fo">4.</string>
    <string name="loan_tips_num_fi">5.</string>
    <string name="loan_update_psw_f">为了保障用户资金的安全性和合同的有效性，君融贷要求所有投资人必须通过交易密码设置</string>
    <string name="loan_update_psw_s">请牢记您设置的交易密码，交易密码可通过交易密码找回功能找回。</string>
    <string name="loan_update_psw_t">密码请不要太简单，建议为最短六位的字母.数字和符号的组合。</string>
    <string name="loan_update_psw_fo">安全认证的过程简单便捷，君融贷对于所有个人资料均作严格保密。</string>
    <string name="loan_update_psw_fi">设置交易密码过程遇到问题，请联系客服</string>
    <string name="loan_please_input_trade_pwd">请输入交易密码</string>
    <string name="loan_month_january">1月</string>
    <string name="loan_month_february">2月</string>
    <string name="loan_month_march">3月</string>
    <string name="loan_month_april">4月</string>
    <string name="loan_month_may">5月</string>
    <string name="loan_month_june">6月</string>
    <string name="loan_month_july">7月</string>
    <string name="loan_month_august">8月</string>
    <string name="loan_month_september">9月</string>
    <string name="loan_month_october">10月</string>
    <string name="loan_month_november">11月</string>
    <string name="loan_month_december">12月</string>
</resources>