<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loan_color_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/loan_15dip"
        android:text="@string/loan_please_input_trade_pwd"
        android:textColor="@color/loan_current_text_color_black"
        android:textSize="@dimen/loan_textsize_18sp" />

    <View style="@style/loan_vertical_item_style" />

    <EditText
        android:id="@+id/loan_trade_edit"
        style="@style/loan_input_edittext_style"
        android:drawableLeft="@drawable/loan_personal_transactionpsw_icon"
        android:drawableStart="@drawable/loan_personal_transactionpsw_icon"
        android:drawablePadding="15dp"
        android:hint="@string/loan_input_trade_pwd"
        android:inputType="textPassword"
        android:maxLength="32"
        android:paddingEnd="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="0dp"
        android:paddingStart="20dp"/>

    <View style="@style/loan_vertical_item_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/loan_trade_enterBtn"
            style="@style/loan_dialog_left_btn_style"
            android:text="@string/loan_base_enter" />

        <Button
            android:id="@+id/loan_trade_cancelBtn"
            style="@style/loan_dialog_right_btn_style"
            android:text="@string/loan_base_cancel" />
    </LinearLayout>

</LinearLayout>